<resources>
    <string name="app_name">Kid\'s Clothes and Shoes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome"> Welcome </string>
    <string name="account"> Account </string>
    <string name="clothes"> Clothes</string>
    <string name="shoes"> Shoes</string>
    <string name="wish"> Wishlist</string>
    <string name="cart"> Cart</string>
    <string name="purchases"> Purchases </string>
    <string name="reservations"> Reservations</string>
    <string name="settings"> Settings</string>
    <string name="help"> Help</string>
    <string name="home"> Home</string>
    <string name="slogan"> Fashion for kids</string>
    <string name="slogan1"> Clothes and Shoes</string>
    <string name="searchBox"> Search for produts</string>
    <string name="allProducts"> Show all products</string>
    <string name="products"> Products</string>
    <string name="topProdutcts"> Top Products </string>
    <string name="successfulLogin">Successful Login ! </string>
    <string name="wrongLogin">Wrong credentials ! </string>
    <string name="details"> Details </string>
    <string name="ProductName">Product name</string>
    <string name="Description"> Description</string>
    <string name="Color"> Color</string>
    <string name="pickColor">Pick a color for the product</string>
    <string name="result"> Search result for </string>
    <string name="results"> Results</string>
    <string name="errorMessage"> No product found</string>
    <string name="afiltrar">Filtering ...</string>
    <string name="favorites"> Your favorite products</string>
    <string name="addFavorite"> Product added to your wishlist! </string>
    <string name="rmFavorite"> Product removed from wishlist!</string>
    <string name="type"> Type of product</string>
    <string name="size"> Size</string>
    <string name="pickSize"> Available sizes</string>
    <string name="addCart"> Add to cart </string>
    <string name="fimCompra"> Buy products </string>
    <string name="fimReserva"> Book products </string>
    <string name="allreadyInCart"> Product already in cart !</string>
    <string name="addedInCart"> Product added to cart!</string>
    <string name="noProducts"> No products in cart!</string>
    <string name="produtosCarrinho"> Products in cart</string>
    <string name="pickQtd"> Pick the quantity</string>
    <string name="quantity"> Quantity</string>
    <string name="deleting"> Deleting ...</string>
    <string name="confirm"> Confirm payment</string>
    <string name="itemShipped"> Item will be shipped to</string>
    <string name="shipping"> Shipping</string>
    <string name="confirmFinal"> Confirm</string>
    <string name="cancelFinal"> Cancel</string>
    <string name="productBuy">Purchase completed</string>
    <string name="wait"> Registering purchase ...</string>
    <string name="reserva"> Reservations</string>
    <string name="confirmDate"> Confirm date and store</string>
    <string name="reservationDate"> Reservation date </string>
    <string name="changeDate"> Change date</string>
    <string name="location"> Shop location</string>
    <string name="seeLocation"> See location</string>
    <string name="pickLocation"> Pick one of the stores</string>
    <string name="confirmReservation1"> Confirm (Step 1/2)</string>
    <string name="confirmReservation2"> Confirm (Step 2/2)</string>
    <string name="noProductsBought"> No products bought !</string>
    <string name="noProductsReserved"> No products reserved !</string>
    <string name="logout"> Logout</string>
    <string name="language"> Language</string>
    <string name="portugues"> Portuguese</string>
    <string name="ingles"> English</string>
    <string name="about"> About </string>
    <string name="aboutText"> Kid\'s Clothes and Shoes was developed for the Human Machine Interaction subject of the Computer Engineering course at the Superior School of Technology and Management of Viana do Castelo. It is a prototype of an application
     which simulates the management of a children\'s clothing store and all images have been taken from the LaRedoute website.It was developed by Francisco Santos, student number 18474</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
