<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shirt"
            android:title="@string/products" />


    </group>

    <group android:checkableBehavior="single" >

                <item
                    android:id="@+id/nav_reserva"
                    android:icon="@drawable/ic_date_range_black_24dp"
                    android:title="@string/reserva" />

                <item
                    android:id="@+id/nav_wish"
                    android:icon="@drawable/ic_like"
                    android:title="@string/wish" />
                <item
                    android:id="@+id/nav_compras"
                    android:icon="@drawable/ic_shopping_bag"
                    android:title="@string/purchases" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />



    </group>



</menu>

